fix linter issues

--- a/incubator/jasperreports/templates/secrets.yaml
+++ b/incubator/jasperreports/templates/secrets.yaml
@@ -10,7 +10,7 @@ metadata:
 type: Opaque
 data:
   {{- if .Values.jasperreportsPassword }}
-  jasperreports-password: {{ .Values.jasperreportsPassword | b64enc | quote }}
+  jasperreports-password: {{ default "" .Values.jasperreportsPassword | b64enc | quote }}
   {{- else }}
   jasperreports-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{- end }}
