fixed linter issues

--- a/incubator/parse/templates/secrets.yaml
+++ b/incubator/parse/templates/secrets.yaml
@@ -12,7 +12,7 @@ data:
   master-key: {{ default "" .Values.parseServer.masterKey | b64enc | quote }}
   {{ if .Values.parseDashboard.enabled }}
   {{ if .Values.parseDashboard.password }}
-  dashboard-password: {{ .Values.parseDashboard.password | b64enc | quote }}
+  dashboard-password: {{ default "" .Values.parseDashboard.password | b64enc | quote }}
   {{ else }}
   dashboard-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ end }}
