--- a/incubator/parse/templates/secrets.yaml
+++ b/incubator/parse/templates/secrets.yaml
@@ -9,7 +9,11 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  {{ if .Values.parseServer.masterKey }}
   master-key: {{ default "" .Values.parseServer.masterKey | b64enc | quote }}
+  {{ else }}
+  master-key: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
   {{ if .Values.parseDashboard.enabled }}
   {{ if .Values.parseDashboard.password }}
   dashboard-password: {{ default "" .Values.parseDashboard.password | b64enc | quote }}
