--- a/incubator/jenkins/templates/secrets.yaml
+++ b/incubator/jenkins/templates/secrets.yaml
@@ -9,4 +9,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  {{ if .Values.jenkinsPassword }}
   jenkins-password: {{ default "" .Values.jenkinsPassword | b64enc | quote }}
+  {{ else }}
+  jenkins-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
