--- a/incubator/jenkins/values.yaml
+++ b/incubator/jenkins/values.yaml
@@ -1,10 +1,10 @@
 ## Bitnami Jenkins image version
 ## ref: https://hub.docker.com/r/bitnami/jenkins/tags/
 ##
-imageTag: 2.33-r0
+image: bitnami/jenkins:2.33-r0
 
 ## Specify a imagePullPolicy
-## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
 # imagePullPolicy:
@@ -15,6 +15,29 @@ imageTag: 2.33-r0
 jenkinsUser: user
 
 ## Application password
+## Defaults to a random 10-character alphanumeric string if not set
 ## ref: https://github.com/bitnami/bitnami-docker-jenkins#configuration
 ##
-jenkinsPassword: bitnami
+# jenkinsPassword:
+
+## Kubernetes configuration
+## For minikube, set this to NodePort, elsewhere use LoadBalancer
+##
+serviceType: LoadBalancer
+
+## Enable persistence using Persistent Volume Claims
+## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
+##
+persistence:
+  enabled: true
+  storageClass: generic
+  accessMode: ReadWriteOnce
+  size: 8Gi
+
+## Configure resource requests and limits
+## ref: http://kubernetes.io/docs/user-guide/compute-resources/
+##
+resources:
+  requests:
+    memory: 512Mi
+    cpu: 300m
