--- a/incubator/postgresql/templates/secrets.yaml
+++ b/incubator/postgresql/templates/secrets.yaml
@@ -9,4 +9,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  {{ if .Values.postgresqlPassword }}
   postgresql-password: {{ default "" .Values.postgresqlPassword | b64enc | quote }}
+  {{ else }}
+  postgresql-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
