--- a/incubator/postgresql/Chart.yaml
+++ b/incubator/postgresql/Chart.yaml
@@ -1,5 +1,5 @@
 name: postgresql
-version: 0.3.6
+version: 0.4.0
 description: Chart for PostgreSQL
 keywords:
 - postgresql
@@ -12,3 +12,4 @@ maintainers:
 - name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
+icon: https://bitnami.com/assets/stacks/postgresql/img/postgresql-stack-110x117.png
