--- a/incubator/memcached/values.yaml
+++ b/incubator/memcached/values.yaml
@@ -1,14 +1,14 @@
 ## Bitnami Memcached image version
-## ref: https://hub.docker.com/r/bitnami/mariadb/tags/
+## ref: https://hub.docker.com/r/bitnami/memcached/tags/
 ##
-imageTag: 1.4.33-r3
+image: bitnami/memcached:1.4.33-r3
 
 ## Specify a imagePullPolicy
-## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
 # imagePullPolicy:
-#
+
 ## Memcached admin user
 ## ref: https://github.com/bitnami/bitnami-docker-memcached#creating-the-memcached-admin-user
 ##
@@ -18,3 +18,16 @@ imageTag: 1.4.33-r3
 ## ref: https://github.com/bitnami/bitnami-docker-memcached#creating-the-memcached-admin-user
 ##
 # memcachedPassword:
+
+## Kubernetes configuration
+## For minikube, set this to NodePort, elsewhere use LoadBalancer
+##
+serviceType: ClusterIP
+
+## Configure resource requests and limits
+## ref: http://kubernetes.io/docs/user-guide/compute-resources/
+##
+resources:
+  requests:
+    memory: 256Mi
+    cpu: 250m
