--- a/incubator/memcached/Chart.yaml
+++ b/incubator/memcached/Chart.yaml
@@ -1,5 +1,5 @@
 name: memcached
-version: 0.3.7
+version: 0.4.0
 description: Chart for Memcached
 keywords:
 - memcached
@@ -11,3 +11,4 @@ maintainers:
 - name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
+icon: https://bitnami.com/assets/stacks/memcached/img/memcached-stack-110x117.png
