updated chart to support random manager password, pvcs, etc

--- a/incubator/tomcat/templates/secrets.yaml
+++ b/incubator/tomcat/templates/secrets.yaml
@@ -9,4 +9,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  {{ if .Values.tomcatPassword }}
   tomcat-password: {{ default "" .Values.tomcatPassword | b64enc | quote }}
+  {{ else }}
+  tomcat-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
