--- a/incubator/tomcat/Chart.yaml
+++ b/incubator/tomcat/Chart.yaml
@@ -1,5 +1,5 @@
 name: tomcat
-version: 0.3.5
+version: 0.4.0
 description: Chart for Apache Tomcat
 keywords:
 - tomcat
@@ -15,3 +15,4 @@ maintainers:
 - name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
+icon: https://bitnami.com/assets/stacks/tomcat/img/tomcat-stack-110x117.png
