--- a/incubator/wildfly/templates/secrets.yaml
+++ b/incubator/wildfly/templates/secrets.yaml
@@ -9,4 +9,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  {{ if .Values.wildflyPassword }}
   wildfly-password: {{ default "" .Values.wildflyPassword | b64enc | quote }}
+  {{ else }}
+  wildfly-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
