--- a/incubator/wildfly/values.yaml
+++ b/incubator/wildfly/values.yaml
@@ -1,10 +1,10 @@
-## Bitnami Wildfly image version
+## Bitnami WildFly image version
 ## ref: https://hub.docker.com/r/bitnami/wildfly/tags/
 ##
-imageTag: 10.1.0-r3
+image: bitnami/wildfly:10.1.0-r3
 
 ## Specify a imagePullPolicy
-## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
 # imagePullPolicy:
@@ -17,4 +17,26 @@ wildflyUsername: user
 ## Admin password
 ## ref: https://github.com/bitnami/bitnami-docker-wildfly#creating-a-custom-user
 ##
-wildflyPassword: password
+# wildflyPassword:
+
+## Kubernetes configuration
+## For minikube, set this to NodePort, elsewhere use LoadBalancer
+##
+serviceType: LoadBalancer
+
+## Enable persistence using Persistent Volume Claims
+## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
+##
+persistence:
+  enabled: true
+  storageClass: generic
+  accessMode: ReadWriteOnce
+  size: 8Gi
+
+## Configure resource requests and limits
+## ref: http://kubernetes.io/docs/user-guide/compute-resources/
+##
+resources:
+  requests:
+    memory: 512Mi
+    cpu: 300m
