--- a/incubator/orangehrm/Chart.yaml
+++ b/incubator/orangehrm/Chart.yaml
@@ -1,5 +1,5 @@
 name: orangehrm
-version: 0.3.2
+version: 0.4.0
 description: OrangeHRM is a free HR management system that offers a wealth of modules to suit the needs of your business.
 keywords:
 - orangehrm
@@ -16,3 +16,4 @@ maintainers:
 - name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
+icon: https://bitnami.com/assets/stacks/orangehrm/img/orangehrm-stack-110x117.png
