--- a/incubator/orangehrm/templates/secrets.yaml
+++ b/incubator/orangehrm/templates/secrets.yaml
@@ -9,5 +9,9 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  {{ if .Values.orangehrmPassword }}
   orangehrm-password: {{ default "" .Values.orangehrmPassword | b64enc | quote }}
+  {{ else }}
+  orangehrm-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
   smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
