--- a/incubator/odoo/templates/svc.yaml
+++ b/incubator/odoo/templates/svc.yaml
@@ -4,10 +4,11 @@ metadata:
   name: {{ template "fullname" . }}
   labels:
     app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  type: LoadBalancer
+  type: {{ .Values.serviceType }}
   ports:
   - name: http
     port: 80
