--- a/incubator/odoo/Chart.yaml
+++ b/incubator/odoo/Chart.yaml
@@ -1,5 +1,5 @@
 name: odoo
-version: 0.3.3
+version: 0.4.0
 description: A suite of web based open source business apps.
 keywords:
 - odoo
@@ -14,3 +14,4 @@ maintainers:
 - name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
+icon: https://bitnami.com/assets/stacks/odoo/img/odoo-stack-110x117.png
