--- a/incubator/odoo/templates/secrets.yaml
+++ b/incubator/odoo/templates/secrets.yaml
@@ -4,9 +4,14 @@ metadata:
   name: {{ template "fullname" . }}
   labels:
     app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  {{ if .Values.odooPassword }}
   odoo-password: {{ default "" .Values.odooPassword | b64enc | quote }}
+  {{ else }}
+  odoo-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
   smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
