--- a/incubator/odoo/values.yaml
+++ b/incubator/odoo/values.yaml
@@ -1,27 +1,27 @@
 ## Bitnami Odoo image version
 ## ref: https://hub.docker.com/r/bitnami/odoo/tags/
 ##
-imageTag: 9.0.20160620-r4
+image: bitnami/odoo:9.0.20160620-r4
 
 ## Specify a imagePullPolicy
-## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
 # imagePullPolicy:
 
 ## Admin email
-## ref: https://github.com/bitnami/bitnami-docker-odoo#environment-variables
+## ref: https://github.com/bitnami/bitnami-docker-odoo#configuration
 ##
 odooEmail: user@example.com
 
 ## Application password
-## ref: https://github.com/bitnami/bitnami-docker-odoo#environment-variables
+## Defaults to a random 10-character alphanumeric string if not set
+## ref: https://github.com/bitnami/bitnami-docker-odoo#configuration
 ##
-odooPassword: bitnami
+# odooPassword:
 
 ## SMTP mail delivery configuration
-## ref: https://github.com/bitnami/bitnami-docker-odoo#smtp-configuration
-##
+## ref: https://github.com/bitnami/bitnami-docker-odoo/#smtp-configuration
 # smtpHost:
 # smtpPort:
 # smtpUser:
@@ -31,8 +31,39 @@ odooPassword: bitnami
 ##
 ## PostgreSQL chart configuration
 ##
-# postgresql:
-  ## PostgreSQL Password
-  ## ref: https://github.com/bitnami/bitnami-docker-postgresql#setting-the-root-password-on-first-run
+postgresql:
+  ## PostgreSQL password
+  ## ref: https://hub.docker.com/_/postgres/
   ##
-  # postgresqlPassword:
+  # postgresPassword:
+
+  ## Enable persistence using Persistent Volume Claims
+  ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
+  ##
+  persistence:
+    enabled: true
+    storageClass: generic
+    accessMode: ReadWriteOnce
+    size: 8Gi
+
+## Kubernetes configuration
+## For minikube, set this to NodePort, elsewhere use LoadBalancer
+##
+serviceType: LoadBalancer
+
+## Enable persistence using Persistent Volume Claims
+## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
+##
+persistence:
+  enabled: true
+  storageClass: generic
+  accessMode: ReadWriteOnce
+  size: 8Gi
+
+## Configure resource requests and limits
+## ref: http://kubernetes.io/docs/user-guide/compute-resources/
+##
+resources:
+  requests:
+    memory: 512Mi
+    cpu: 300m
