--- a/incubator/osclass/Chart.yaml
+++ b/incubator/osclass/Chart.yaml
@@ -1,5 +1,5 @@
 name: osclass
-version: 0.3.2
+version: 0.4.0
 description: Osclass is a php script that allows you to quickly create and manage your own free classifieds site.
 keywords:
 - osclass
@@ -14,3 +14,4 @@ maintainers:
 - name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
+icon: https://bitnami.com/assets/stacks/osclass/img/osclass-stack-110x117.png
