--- a/incubator/osclass/templates/secrets.yaml
+++ b/incubator/osclass/templates/secrets.yaml
@@ -9,5 +9,9 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  {{ if .Values.osclassPassword }}
   osclass-password: {{ default "" .Values.osclassPassword | b64enc | quote }}
+  {{ else }}
+  osclass-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
   smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
