--- a/incubator/osclass/templates/svc.yaml
+++ b/incubator/osclass/templates/svc.yaml
@@ -8,8 +8,10 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  type: LoadBalancer
+  type: {{ .Values.serviceType }}
+  {{- if eq .Values.serviceType "LoadBalancer" }}
   loadBalancerIP: {{ default "" .Values.osclassLoadBalancerIP }}
+  {{- end }}
   ports:
   - name: http
     port: 80
