--- a/incubator/osclass/values.yaml
+++ b/incubator/osclass/values.yaml
@@ -1,10 +1,10 @@
 ## Bitnami Osclass image version
 ## ref: https://hub.docker.com/r/bitnami/osclass/tags/
 ##
-imageTag: 3.6.1-r2
+image: bitnami/osclass:3.6.1-r2
 
 ## Specify a imagePullPolicy
-## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
 # imagePullPolicy:
@@ -22,26 +22,25 @@ imageTag: 3.6.1-r2
 ## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-osclass#configuration
 ##
-osclassUser: user
+osclassUsername: user
 
 ## Application password
+## Defaults to a random 10-character alphanumeric string if not set
 ## ref: https://github.com/bitnami/bitnami-docker-osclass#configuration
 ##
-osclassPassword: bitnami1
+# osclassPassword:
 
 ## Admin email
 ## ref: https://github.com/bitnami/bitnami-docker-osclass#configuration
 ##
 osclassEmail: user@example.com
 
-## Application tittle
+## Application title
 ## ref: https://github.com/bitnami/bitnami-docker-osclass#configuration
-##
 osclassWebTitle: 'Sample Web Page'
 
 ## Allow site to appear in search engines
 ## ref: https://github.com/bitnami/bitnami-docker-osclass#configuration
-##
 osclassPingEngines: 1
 
 ## Automatically send usage statistics and crash reports to Osclass
@@ -61,8 +60,44 @@ osclassSaveStats: 1
 ##
 ## MariaDB chart configuration
 ##
-# mariadb:
+mariadb:
   ## MariaDB admin password
   ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
   ##
   # mariadbRootPassword:
+
+  ## Enable persistence using Persistent Volume Claims
+  ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
+  ##
+  persistence:
+    enabled: true
+    storageClass: generic
+    accessMode: ReadWriteOnce
+    size: 8Gi
+
+## Kubernetes configuration
+## For minikube, set this to NodePort, elsewhere use LoadBalancer
+##
+serviceType: LoadBalancer
+
+## Enable persistence using Persistent Volume Claims
+## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
+##
+persistence:
+  enabled: true
+  apache:
+    storageClass: generic
+    accessMode: ReadWriteOnce
+    size: 1Gi
+  osclass:
+    storageClass: generic
+    accessMode: ReadWriteOnce
+    size: 8Gi
+
+## Configure resource requests and limits
+## ref: http://kubernetes.io/docs/user-guide/compute-resources/
+##
+resources:
+  requests:
+    memory: 512Mi
+    cpu: 300m
