--- a/incubator/moodle/values.yaml
+++ b/incubator/moodle/values.yaml
@@ -4,10 +4,9 @@
 image: bitnami/moodle:3.1.3-r5
 
 ## Specify a imagePullPolicy
-## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
-# imagePullPolicy:
+imagePullPolicy: IfNotPresent
 
 ## User of the application
 ## ref: https://github.com/bitnami/bitnami-docker-moodle#environment-variables
@@ -17,7 +16,7 @@ moodleUsername: user
 ## Application password
 ## Defaults to a random 10-character alphanumeric string if not set
 ## ref: https://github.com/bitnami/bitnami-docker-moodle#environment-variables
-#moodlePassword: 
+# moodlePassword:
 
 ## Admin email
 ## ref: https://github.com/bitnami/bitnami-docker-moodle#environment-variables
