--- a/incubator/mysql/values.yaml
+++ b/incubator/mysql/values.yaml
@@ -5,10 +5,9 @@
 image: bitnami/mysql:5.7.17-r2
 
 ## Specify a imagePullPolicy
-## Default to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
-# imagePullPolicy:
+imagePullPolicy: IfNotPresent
 
 ## Specify password for root user
 ## ref: https://github.com/bitnami/bitnami-docker-mysql/blob/master/README.md#setting-the-root-password-on-first-run
