--- a/incubator/nginx/values.yaml
+++ b/incubator/nginx/values.yaml
@@ -4,7 +4,6 @@
 imageTag: 1.10.2-r3
 
 ## Specify a imagePullPolicy
-## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
-# imagePullPolicy:
+imagePullPolicy: IfNotPresent
