--- a/incubator/tomcat/values.yaml
+++ b/incubator/tomcat/values.yaml
@@ -4,10 +4,9 @@
 image: bitnami/tomcat:8.0.39-r5
 
 ## Specify a imagePullPolicy
-## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
-# imagePullPolicy:
+imagePullPolicy: IfNotPresent
 
 ## Admin user
 ## ref: https://github.com/bitnami/bitnami-docker-tomcat#creating-a-custom-user
