--- a/incubator/wildfly/values.yaml
+++ b/incubator/wildfly/values.yaml
@@ -4,10 +4,9 @@
 image: bitnami/wildfly:10.1.0-r5
 
 ## Specify a imagePullPolicy
-## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
-# imagePullPolicy:
+imagePullPolicy: IfNotPresent
 
 ## Admin user
 ## ref: https://github.com/bitnami/bitnami-docker-wildfly#creating-a-custom-user
