--- a/incubator/suitecrm/Chart.yaml
+++ b/incubator/suitecrm/Chart.yaml
@@ -11,4 +11,4 @@ maintainers:
 - name: Bitnami
   email: containers@bitnami.com
 engine: gotpl
-icon: https://d33np9n32j53g7.cloudfront.net/assets/stacks/suitecrm/img/suitecrm-stack-110x117-cc7219b1d5240ab390bb9dac08980af7.png
+icon: https://bitnami.com/assets/stacks/osclass/img/osclass-stack-110x117.png
