--- a/incubator/suitecrm/templates/deployment.yaml
+++ b/incubator/suitecrm/templates/deployment.yaml
@@ -41,18 +41,18 @@ spec:
         - name: SUITECRM_HOST
           value: {{ default "" .Values.suitecrmHost | quote }}
         - name: SUITECRM_SMTP_HOST
-          value: {{ default "" .Values.smtpHost | quote }}
+          value: {{ default "" .Values.suitecrmSmtpHost | quote }}
         - name: SUITECRM_SMTP_PORT
-          value: {{ default "" .Values.smtpPort | quote }}
+          value: {{ default "" .Values.suitecrmSmtpPort | quote }}
         - name: SUITECRM_SMTP_USER
-          value: {{ default "" .Values.smtpUser | quote }}
+          value: {{ default "" .Values.suitecrmSmtpUser | quote }}
         - name: SUITECRM_SMTP_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ template "fullname" . }}
-              key: smtp-password
+              key: suitecrm-smtp-password
         - name: SUITECRM_SMTP_PROTOCOL
-          value: {{ default "" .Values.smtpProtocol | quote }}
+          value: {{ default "" .Values.suitecrmSmtpProtocol | quote }}
         ports:
         - name: http
           containerPort: 80
