--- a/incubator/suitecrm/templates/secrets.yaml
+++ b/incubator/suitecrm/templates/secrets.yaml
@@ -14,4 +14,4 @@ data:
   {{- else }}
   suitecrm-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{- end }}
-  smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
+  suitecrm-smtp-password: {{ default "" .Values.suitecrmSmtpPassword | b64enc | quote }}
