--- a/incubator/suitecrm/templates/deployment.yaml
+++ b/incubator/suitecrm/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if include "host" . -}}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -27,6 +28,8 @@ spec:
             secretKeyRef:
               name: {{ template "mariadb.fullname" . }}
               key: mariadb-root-password
+        - name: SUITECRM_HOST
+          value: {{ include "host" . | quote }}
         - name: SUITECRM_USERNAME
           value: {{ default "" .Values.suitecrmUsername | quote }}
         - name: SUITECRM_PASSWORD
@@ -38,8 +41,6 @@ spec:
           value: {{ default "" .Values.suitecrmEmail | quote }}
         - name: SUITECRM_LAST_NAME
           value: {{ default "" .Values.suitecrmLastName | quote }}
-        - name: SUITECRM_HOST
-          value: {{ default "" .Values.suitecrmHost | quote }}
         - name: SUITECRM_SMTP_HOST
           value: {{ default "" .Values.suitecrmSmtpHost | quote }}
         - name: SUITECRM_SMTP_PORT
@@ -69,7 +70,7 @@ spec:
             path: /
             port: http
           initialDelaySeconds: 30
-          timeoutSeconds: 5
+          timeoutSeconds: 1
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         volumeMounts:
@@ -92,3 +93,4 @@ spec:
       {{- else }}
         emptyDir: {}
       {{- end }}
+{{- end -}}
