--- a/incubator/suitecrm/templates/secrets.yaml
+++ b/incubator/suitecrm/templates/secrets.yaml
@@ -9,9 +9,9 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{- if .Values.suitecrmPassword }}
-  suitecrm-password: {{ default ""  .Values.suitecrmPassword | b64enc | quote }}
-  {{- else }}
+  {{ if .Values.suitecrmPassword }}
+  suitecrm-password: {{ default "" .Values.suitecrmPassword | b64enc | quote }}
+  {{ else }}
   suitecrm-password: {{ randAlphaNum 10 | b64enc | quote }}
-  {{- end }}
+  {{ end }}
   suitecrm-smtp-password: {{ default "" .Values.suitecrmSmtpPassword | b64enc | quote }}
