--- a/incubator/piwik/templates/apache-pvc.yaml
+++ b/incubator/piwik/templates/apache-pvc.yaml
@@ -9,7 +9,11 @@ metadata:
     heritage: "{{ .Release.Service }}"
   name: {{ template "fullname" . }}-apache
   annotations:
-    volume.alpha.kubernetes.io/storage-class: {{ .Values.persistence.apache.storageClass | quote }}
+  {{- if .Values.persistence.apache.storageClass }}
+    volume.beta.kubernetes.io/storage-class: {{ .Values.persistence.apache.storageClass | quote }}
+  {{- else }}
+    volume.alpha.kubernetes.io/storage-class: default
+  {{- end }}
 spec:
   accessModes:
     - {{ .Values.persistence.apache.accessMode | quote }}
