--- a/incubator/piwik/templates/piwik-pvc.yaml
+++ b/incubator/piwik/templates/piwik-pvc.yaml
@@ -9,7 +9,11 @@ metadata:
     heritage: "{{ .Release.Service }}"
   name: {{ template "fullname" . }}-piwik
   annotations:
-    volume.alpha.kubernetes.io/storage-class: {{ .Values.persistence.piwik.storageClass | quote }}
+  {{- if .Values.persistence.piwik.storageClass }}
+    volume.beta.kubernetes.io/storage-class: {{ .Values.persistence.piwik.storageClass | quote }}
+  {{- else }}
+    volume.alpha.kubernetes.io/storage-class: default
+  {{- end }}
 spec:
   accessModes:
     - {{ .Values.persistence.piwik.accessMode | quote }}
