--- a/incubator/mean/templates/svc.yaml
+++ b/incubator/mean/templates/svc.yaml
@@ -12,6 +12,6 @@ spec:
   ports:
   - name: http
     port: 80
-    targetPort: http
+    targetPort: 8080
   selector:
     app: {{ template "fullname" . }}
