--- a/incubator/mean/templates/deployment.yaml
+++ b/incubator/mean/templates/deployment.yaml
@@ -34,11 +34,9 @@ spec:
         image: "{{ .Values.image }}"
         imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         env:
-        - name: GIT_REPO
-          value: {{ .Values.repository }}
         - name: MONGODB_HOST
           value: {{ template "mongodb.fullname" . }}
-        - name: MONGODB_PORT 
+        - name: MONGODB_PORT
           value: "27017"
         - name: MONGODB_ROOT_PASSWORD
           valueFrom:
@@ -46,14 +44,16 @@ spec:
               name: {{ template "mongodb.fullname" . }}
               key: mongodb-root-password
         - name: MONGODB_USERNAME
-          value: {{ default "" .Values.mongodbUsername | quote }}
+          value: {{ default "" .Values.mongodb.mongodbUsername | quote }}
         - name: MONGODB_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ template "mongodb.fullname" . }}
               key: mongodb-password
         - name: MONGODB_DATABASE
-          value: {{ default "" .Values.mongodbDatabase | quote }}
+          value: {{ default "" .Values.mongodb.mongodbDatabase | quote }}
+        - name: GIT_REPO
+          value: {{ .Values.repository }}
         command:
         - "/bin/bash"
         - "-ec"
@@ -61,7 +61,7 @@ spec:
           git checkout {{ .Values.revision }}
           chown -R bitnami:daemon /app
           su  bitnami -c 'PATH=$PATH:/opt/bitnami/node/bin/ npm install'
-          su  bitnami -c 'PATH=$PATH:/opt/bitnami/node/bin/ npm start' 
+          su  bitnami -c 'PATH=$PATH:/opt/bitnami/node/bin/ npm start'
         ports:
         - name: http
           containerPort: 8080
