added configfile variable

--- a/incubator/mean/values.yaml
+++ b/incubator/mean/values.yaml
@@ -26,6 +26,7 @@ config: |-
       localUrl: "mongodb://" +  process.env.MONGODB_USERNAME +":" + process.env.MONGODB_PASSWORD + "@" +  process.env.MONGODB_HOST +":"+ process.env.MONGODB_PORT + "/" +  process.env.MONGODB_DATABASE 
   };
 
+configfile: database.js 
 
 ##
 ## MongoDB chart configuration
