--- a/incubator/mean/templates/storageclass.yaml
+++ b/incubator/mean/templates/storageclass.yaml
@@ -1,3 +1,4 @@
+{{- if contains "LoadBalancer" .Values.serviceType }}
 kind: StorageClass
 apiVersion: storage.k8s.io/v1beta1
 metadata:
@@ -9,4 +10,5 @@ metadata:
 provisioner: kubernetes.io/gce-pd
 parameters:
   type: pd-standard
+{{- end -}}
 
