--- a/incubator/mean/Chart.yaml
+++ b/incubator/mean/Chart.yaml
@@ -1,6 +1,6 @@
 name: mean
 version: 0.1.0
-description: The Bitnami MEAN Stack provides a complete development environment for the leading noSQL database, MongoDB. 
+description: MEAN is a free and open-source JavaScript software stack for building dynamic web sites and web applications. The MEAN stack is MongoDB, Express.js, Angular, and Node.js. Because all components of the MEAN stack support programs written in JavaScript, MEAN applications can be written in one language for both server-side and client-side execution environments.
 keywords:
 - node
 - javascript 
