--- a/incubator/mean/templates/configmap.yaml
+++ b/incubator/mean/templates/configmap.yaml
@@ -8,7 +8,7 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 data:
-  database.js: |-
+  {{ default "database.js" .Values.configfile}}: |-
 {{- if .Values.config }}
 {{ default ""  .Values.config | indent 4 }}
 {{- end -}}
