--- a/incubator/moodle/templates/moodle-pvc.yaml
+++ b/incubator/moodle/templates/moodle-pvc.yaml
@@ -2,14 +2,18 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
+  name: {{ template "fullname" . }}-moodle
   labels:
     app: {{ template "fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
-  name: {{ template "fullname" . }}-moodle
   annotations:
-    volume.alpha.kubernetes.io/storage-class: {{ .Values.persistence.moodle.storageClass | quote }}
+  {{- if .Values.persistence.moodle.storageClass }}
+    volume.beta.kubernetes.io/storage-class: {{ .Values.persistence.moodle.storageClass | quote }}
+  {{- else }}
+    volume.alpha.kubernetes.io/storage-class: default
+  {{- end }}
 spec:
   accessModes:
     - {{ .Values.persistence.moodle.accessMode | quote }}
