--- a/incubator/moodle/templates/secrets.yaml
+++ b/incubator/moodle/templates/secrets.yaml
@@ -9,9 +9,9 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{- if .Values.moodlePassword }}
+  {{ if .Values.moodlePassword }}
   moodle-password: {{ default "" .Values.moodlePassword | b64enc | quote }}
-  {{- else }}
+  {{ else }}
   moodle-password: {{ randAlphaNum 10 | b64enc | quote }}
-  {{- end }}
+  {{ end }}
   smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
