--- a/incubator/wildfly/values.yaml
+++ b/incubator/wildfly/values.yaml
@@ -28,7 +28,10 @@ serviceType: LoadBalancer
 ##
 persistence:
   enabled: true
-  storageClass: generic
+  ## If defined, volume.beta.kubernetes.io/storage-class: <storageClass>
+  ## Default: volume.alpha.kubernetes.io/storage-class: default
+  ##
+  # storageClass:
   accessMode: ReadWriteOnce
   size: 8Gi
 
