--- a/incubator/mysql/templates/deployment.yaml
+++ b/incubator/mysql/templates/deployment.yaml
@@ -18,6 +18,7 @@ spec:
             {
               "name": "copy-custom-config",
               "image": "{{ .Values.image }}",
+              "imagePullPolicy": {{ .Values.imagePullPolicy | quote }},
               "command": ["sh", "-c", "mkdir -p /bitnami/mysql/conf && cp -n /bitnami/mysql_config/my.cnf /bitnami/mysql/conf/my_custom.cnf"],
               "volumeMounts": [
                 {
