mysql: Lt Gen. Cleanup reporting for service

--- a/incubator/mysql/templates/configmap.yaml
+++ b/incubator/mysql/templates/configmap.yaml
@@ -10,5 +10,5 @@ metadata:
 data:
   my.cnf: |-
 {{- if .Values.config }}
-{{ default ""  .Values.config | indent 4 }}
+{{ .Values.config | indent 4 }}
 {{- end -}}
