--- a/incubator/parse/templates/secrets.yaml
+++ b/incubator/parse/templates/secrets.yaml
@@ -9,8 +9,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{ if .Values.parseServer.masterKey }}
-  master-key: {{ default "" .Values.parseServer.masterKey | b64enc | quote }}
+  {{ if .Values.parse.masterKey }}
+  master-key: {{ default "" .Values.parse.masterKey | b64enc | quote }}
   {{ else }}
   master-key: {{ randAlphaNum 10 | b64enc | quote }}
   {{ end }}
