--- a/incubator/parse/values.yaml
+++ b/incubator/parse/values.yaml
@@ -8,7 +8,7 @@ serviceType: LoadBalancer
 ##
 # loadBalancerIP:
 
-parseServer:
+parse:
   ## Bitnami Parse image version
   ## ref: https://hub.docker.com/r/bitnami/parse/tags/
   ##
